--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
       </div>
       <!--row2*****************************************************************************************************-->
       <div class="row m-4">
-        <div class="col-4 col-bg-1 card">
+        <div class="col-bg-1 card col-12  col-sm-4">
           <div class="card-body text-center">
             <p class="content"><i class="fa-solid fa-thumbs-up"></i></p>
             <h4 class="card-title">Secure & Reliable</h4>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, voluptas quod repudiandae amet placeat adipisci distinctio cumque pariatur</p>
           </div>
         </div>
-        <div class="col-4 col-bg-2">
+        <div class="col-bg-2 col-12  col-sm-4">
           <div class="card-body text-center">
             <p class="content"><i class="fa-solid fa-plane"></i></p>
             <h4 class="card-title">Quik & Super Fast</h4>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, voluptas quod repudiandae amet placeat adipisci distinctio cumque pariatur</p>
           </div>
         </div>
-        <div class="col-4 col-bg-3">
+        <div class="col-bg-3 col-12  col-sm-4">
           <div class="card-body text-center">
             <p class="content"><i class="fa-solid fa-message"></i></p>
             <h4 class="card-title">Customer Support</h4>
